# ashare_bt

./: README.md  __init__.py  backtest.py  base.py  broker.py  builtin.py  environment.yml  feed.py  indicators.py  metrics.py  position.py  pyproject.toml  quickstart.py  result.py  test_backtest.py  test_result_smoke.py
ashare_bt.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
data/: ashare_download.bat  download_all.py  loader.py  local_api.py  local_api_demo.py  quickstart.py  sector_api.py  sector_demo.py  williams_live.bat
data_cache/: 600519_qfq.csv  index_000300.csv
mnt/user-data/outputs/ashare_bt/ashare_bt/metrics/: __init__.py
signals/: aggregate_from_cache.py  live_signals.py  markout_sweep.py  nine_turns.py  nine_turns_demo.py  portfolio_signals.py  read_sweep.py  williams_markout_demo.py  williams_signals.py
